--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -252,9 +252,9 @@ ul.nav-links li ul.sub-menu li a { color: #fff; font-size: 15px; font-weight: 40
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/akarakun\/AdminDashboard\/akarakun\.github\.io\/stylesheets\/pages\/_home\.scss}line{font-family:\00003205}}
 .home-section nav .search-box .search-box--icon .icon i { position: absolute; top: 25%; left: 25%; }
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/akarakun\/AdminDashboard\/akarakun\.github\.io\/stylesheets\/pages\/_home\.scss}line{font-family:\00003214}}
-.home-section .share { position: fixed; bottom: 60px; right: 15px; border: 1px solid yellow; width: 35px; height: 35px; border-radius: 25px; background: yellow; }
+.home-section .share { position: fixed; bottom: 100px; right: 15px; border: 1px solid #0a2558; width: 50px; height: 50px; border-radius: 25px; background: #0a2558; }
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/akarakun\/AdminDashboard\/akarakun\.github\.io\/stylesheets\/pages\/_home\.scss}line{font-family:\00003223}}
-.home-section .share i { position: absolute; top: 25%; left: 25%; }
+.home-section .share i { position: absolute; top: 29%; left: 29%; color: #fff; }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/akarakun\/AdminDashboard\/akarakun\.github\.io\/stylesheets\/pages\/_login\.scss}line{font-family:\000031}}
 body.login { min-height: 100vh; display: flex; /* kích hoạt flexbox */ align-items: center; justify-content: center; background: #7d2ae8; padding: 30px; }
